# remote-desktop-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_debug.cmd  build_release.cmd
client-qt/: CMakeLists.txt
client-qt/src/: frame_view.cpp  frame_view.h  main.cpp  main_window.cpp  main_window.h  network_client.cpp  network_client.h
cmake/: copy_files.cmake
core/: CMakeLists.txt
core/include/: frame_codec_interface.h  frame_protocol.h  screen_capture.h  transport_adapter_interface.h  version.h
core/src/: screen_capture_win.cpp  version.cpp
server-qt/: CMakeLists.txt
server-qt/src/: downscale_helper.h  jpeg_frame_codec.h  main.cpp  network_server.cpp  network_server.h  passthrough_frame_codec.h  screen_capture_service.cpp  screen_capture_service.h
server-qt/src/logging/: qt_logging_handler.h
